src/test/deca/codegen/invalid/execution_error_arithmetic_overflow_plus_float.deca
// Description:
//    Test arithmetic overflow with float operation plus
//
// Result:
//[Begin Result]
//Error: Overflow during arithmetic operation
//[End Result]
//
// History:
//    created on 09/01/2025
{
    float a = 3.4028235e+38 ; //Max positive float;
    a = a + 1.0e+32;
    println(a);

}